syntax = "proto3";
package caerus.grants.v1;

option go_package = "github.com/desmos-labs/caerus/routes/grants";

import "google/protobuf/empty.proto";

service GrantsService {
  rpc RequestFeeAllowance(RequestFeeAllowanceRequest)
      returns (google.protobuf.Empty);
}

message RequestFeeAllowanceRequest {
  // UserDesmosAddress represents the Desmos address of the user that
  // should be granted the fee allowance
  string user_desmos_address = 1;
}